# SR-RT_GPU_engine

./: .gitignore  CMakeLists.txt  README.md
docs/: ROADMAP.md
include/: gpu_types.hpp  renderer_host.hpp  scene_builder.hpp
presets/: studio_env.ppm
shaders/: render_sphere.metal
src/: main.mm  renderer_host.mm  scene_builder.cpp
tools/gui/: button_styles.py  gpu_gui_runtime.py  gpu_image_gui.py
